# appwrapper

./: .gitignore  README.md  build_android.py  config.json  generate_spec.py  main.py  main.qml  pyproject.toml
.github/workflows/: build-android.yml
